# python-cli-compare

./: pyproject.toml
python_cli_compare/: __main__.py  click_cli.py  fire_cli.py
