[tool.poetry]
name = "python-cli-compare"
version = "0.1.0"
description = ""
authors = ["Koichiro Okamoto <koichiro_okamoto@albert2005.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.4.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
